# Dating-Telegram-Bot-Webapp

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  start_tunnels.bat
backend/: main.py
backend/api/: dependencies.py  likes.py  routers.py  users.py
backend/repositories/: likes.py  users.py
backend/services/: likes.py  users.py
backend/utils/: repository.py
bot/: __init__.py  main.py
bot/callbacks/: likes_pagination.py  main_callback.py  profile_edit.py
bot/handlers/: form.py  form.py~  questionaire.py  user_commands.py
bot/keyboards/: builders.py  inline.py  reply.py
bot/utils/: states.py
config/: env.py
db/: db_config.py
db/models/: likes.py  user.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/users/[users]/: layout.tsx  loading.tsx  page.tsx
frontend/app/users/[users]/[about]/: layout.tsx  loading.tsx  page.tsx
frontend/app/users/[users]/likes_by/: page.tsx
frontend/app/users/[users]/likes_from/: layout.tsx  page.tsx
frontend/components/: HeartIcon.jsx  HeartIconFill.jsx  LikeButton.tsx  api.tsx  card.tsx  card_about.tsx  icons.tsx  navbar.tsx
frontend/config/: site.ts  url.ts
